# polysemy-mocks

./: .envrc  .gitignore  ChangeLog.md  LICENSE  README.md  cabal.project  default.nix  direnv.nix  flake.nix  hie.yaml  lsp-wrapper.sh  polysemy-mocks.cabal  shell.nix  stack-8.8.yaml  stack-deps-8.8.nix  stack-deps.nix  stack.yaml
ci/: compile-and-test.sh  pipeline.dhall  run-tests-with.dhall  set-pipeline.sh
nix/: sources.json
src/Test/Polysemy/: Mock.hs
src/Test/Polysemy/Mock/: TH.hs
test/Test/Polysemy/Mock/: TeletypeIdentitySpec.hs  TeletypeSpec.hs  TeletypeTHSpec.hs
