cabal-version: 1.12

name:           polysemy-mocks
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/akshaymankar/polysemy-mocks#readme>
homepage:       https://github.com/akshaymankar/polysemy-mocks#readme
bug-reports:    https://github.com/akshaymankar/polysemy-mocks/issues
author:         Akshay Mankar
maintainer:     itsakshaymankar@gmail.com
copyright:      2020 Akshay Mankar
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/akshaymankar/polysemy-mocks

library
  hs-source-dirs:
      src
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , polysemy
    , polysemy-plugin
    , template-haskell
  exposed-modules:
      Test.Polysemy.Mock
      Test.Polysemy.Mock.TH

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , polysemy
    , polysemy-mocks
    , polysemy-plugin
  default-language: Haskell2010
  other-modules:
      Test.Polysemy.Mock.TeletypeTHSpec
      Test.Polysemy.Mock.TeletypeSpec
  build-tool-depends:  hspec-discover:hspec-discover